--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,11 @@ label {
   position: absolute;
 }
 
+.form-label {
+  padding: 0 !important;
+  padding-top: .3rem !important;
+}
+
 
 // 下面都是ag-grid的样式
 
