--- a/src/app/core/components/dr-date/dr-date.component.html
+++ b/src/app/core/components/dr-date/dr-date.component.html
@@ -3,8 +3,10 @@
     <ng-container *ngIf="type==='input'">
       <label [style.display]="nameShow?'block':'none'" class="form-label" #drDateLabelEle>{{dateName}}</label>
       <div class="input-group">
-        <input type="text" #dateInput class="form-input" [class.input-sm]="size==='small'" id="date" name="date" [(ngModel)]="date">
-        <i class="input-group-addon form-icon fa fa-calendar" [class.icon-sm]="size==='small'" (click)="show = !show"></i>
+        <input type="text" readonly #dateInput class="form-input" [class.input-sm]="size==='small'" id="date"
+          name="date" [(ngModel)]="date">
+        <i class="input-group-addon form-icon fa fa-calendar" [class.icon-sm]="size==='small'"
+          (click)="show = !show"></i>
       </div>
     </ng-container>
 
