--- a/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
+++ b/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
@@ -4,7 +4,7 @@
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #fundPartyListEle>
         <input type="text" #fundPartyInputEle class="form-input" [placeholder]="'请选择'+title" name="fundParty"
-          [(ngModel)]="fundParty" autocomplete="off" id="fundParty-list">
+          [(ngModel)]="fundParty" (ngModelChange)="change($event)" autocomplete="off" id="fundParty-list">
         <i class="form-icon fa fa-share" aria-hidden="true"></i>
       </div>
       <ul class="menu" id="fundParty-ul" [style.display]="ulShow === true ? 'block':'none'">
