基础数据的添加和编辑

--- a/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.scss
+++ b/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.scss
@@ -1,12 +1,12 @@
-main {
-  div {
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0;
-  }
+// main {
+//   div {
+//     display: flex;
+//     flex-direction: column;
+//     margin: 10px 0;
+//   }
 
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-  }
-}
+//   .btn-group {
+//     display: flex;
+//     flex-direction: row;
+//   }
+// }
