--- a/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.scss
+++ b/src/app/core/components/participant/participant-add-edit/participant-add-edit.component.scss
@@ -1,16 +1,16 @@
-main {
-  div {
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0;
-  }
+// main {
+//   div {
+//     display: flex;
+//     flex-direction: column;
+//     margin: 10px 0;
+//   }
 
-  .inline {
-    display: inline;
-  }
+//   .inline {
+//     display: inline;
+//   }
 
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-  }
-}
+//   .btn-group {
+//     display: flex;
+//     flex-direction: row;
+//   }
+// }
