--- a/src/app/core/components/participant/participant-select/participant-select.component.html
+++ b/src/app/core/components/participant/participant-select/participant-select.component.html
@@ -20,12 +20,10 @@
         </a>
 
       </li>
-      <li class="menu-item add">
+      <li class="add">
         <button tabindex="-1" class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i>
           添加参与人</button>
       </li>
     </ul>
   </section>
-
-
 </main>
