--- a/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
+++ b/src/app/core/components/addreess/address-add-edit/address-add-edit.component.html
@@ -39,7 +39,7 @@
       <textarea class="form-input" name="memo" [(ngModel)]="address.memo"></textarea>
     </div>
     <div class="form-group btn-group">
-      <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">{{data?'编辑':'添加'}}</button>
       <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
