--- a/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.html
+++ b/src/app/core/components/expenseBook/expense-book-add-edit/expense-book-add-edit.component.html
@@ -1,23 +1,25 @@
 <main>
-  <p>添加支出账本</p>
+  <div class="header-panel">
+    {{data?'编辑':'添加'}}账本
+  </div>
   <form>
-    <div>
+    <div class="form-group">
       <label>
         账本名:
       </label>
-      <input type="text" name="name" [(ngModel)]="name">
+      <input class="form-input" type="text" name="name" [(ngModel)]="expenseBook.name">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>
         备注:
       </label>
-      <textarea name="memo" [(ngModel)]="memo"></textarea>
+      <textarea class="form-input" name="memo" [(ngModel)]="expenseBook.memo"></textarea>
     </div>
 
-    <div class="btn-group">
-      <button (click)="add()">添加</button>
-      <button (click)="cancel()">取消</button>
+    <div class="form-group btn-group">
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">{{data?'编 辑':'添 加'}}</button>
+      <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
 </main>
