--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
@@ -90,7 +90,7 @@
     </fieldset>
 
     <div class="form-group btn-group">
-        <button type="button" (click)="addOrEdit()" class="btn btn-primary">添 加</button>
+        <button type="button" (click)="addOrEdit()" class="btn btn-primary">{{data?'编 辑':'添 加'}}</button>
         <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
       </div>
   </form>
