--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -43,6 +43,8 @@ input {
 }
 
 ul {
+  padding: 0;
+  border-radius: .1rem .1rem 0 0;
   position: absolute;
   width: 100%;
   max-height: 150px;
@@ -51,6 +53,10 @@ ul {
 
   li {
     cursor: pointer;
+  }
+  button {
+    width: 100%;
+    border-radius: 0;
   }
 }
 
