--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -54,6 +54,7 @@ ul {
   li {
     cursor: pointer;
   }
+
   button {
     width: 100%;
     border-radius: 0;
@@ -66,6 +67,15 @@ ul {
   justify-content: space-between;
   width: 100%;
 }
+
+.menu .menu-item {
+  padding: 0;
+}
+
+.menu .menu-item>a {
+  margin: 0;
+}
+
 
 .add {
   position: sticky;
