--- a/src/app/components/account/components/expense/expense-list/expense-list.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-list.component.scss
@@ -35,12 +35,15 @@ li {
 }
 
 ul {
+  height: 200px;
   flex-grow: 1;
   border: 1px solid #dedede;
   border-radius: 0px 0 3px 3px;
   border-top: none;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .no-expense {
@@ -63,4 +66,8 @@ ul li {
 
 ul li:hover {
   background: #efefef;
+}
+
+ul::-webkit-scrollbar {
+  display: none;
 }
