--- a/src/app/core/components/label/label-select/label-select.component.scss
+++ b/src/app/core/components/label/label-select/label-select.component.scss
@@ -14,6 +14,7 @@ main {
   display: flex;
   width: 20px;
   align-items: center;
+  -webkit-app-region: no-drag !important;
 }
 
 ul {
@@ -36,6 +37,7 @@ ul {
     width: 75px;
     height: 25px;
     padding-left: 4px;
+    font-size: 0.6rem;
 
     &:focus {
       border: 1px solid #2db7f5;
@@ -72,6 +74,7 @@ ul {
       align-items: center;
       justify-content: center;
       font-style: normal;
+
       &:hover {
         border-radius: 50%;
         background: #000;
