--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -10,6 +10,12 @@ i {
   -webkit-app-region: no-drag;
 }
 
+.chip a:hover {
+  background: #000;
+  border-radius: 50%;
+  color: #fff;
+}
+
 main {
   display: flex;
   flex-direction: row;
@@ -59,6 +65,12 @@ ul {
     width: 100%;
     border-radius: 0;
   }
+}
+
+
+.choice {
+  background: #f1f1fc;
+  color: #5755d9;
 }
 
 .menu-item a {
