--- a/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
+++ b/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
@@ -4,7 +4,7 @@
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #incomeCategoryListEle>
         <input type="text" #incomeCategoryInputEle class="form-input" #incomeCategoryInputEle placeholder="请选择收入类别"
-          name="incomeCategory" [(ngModel)]="incomeCategory" autocomplete="off" id="incomeCategory-list">
+          name="incomeCategory" [ngModel]="incomeCategory" (ngModelChange)="change($event)" autocomplete="off" id="incomeCategory-list">
         <i class="form-icon fa fa-th-large" aria-hidden="true"></i>
       </div>
       <ul class="menu" id="incomeCategory-ul" [style.display]="ulShow === true ? 'block':'none'">
