--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,20 @@ body {
   -webkit-app-region: drag
 }
 
+html {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+body {
+  width: 930px;
+  height: 650px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.12), inset 0 -1px 0 0 #dadce0;
+}
+
+
+
 
 button,
 input,
